--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>DigitalOcean</title>
         <script src="https://kit.fontawesome.com/a8be4378ea.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Roboto:400,700&display=swap" rel="stylesheet">
